<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInputWindow"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="end|center"
        android:textSize="45sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:maxLines="1"
        android:layout_marginTop="50dp" />

    <TextView
        android:id="@+id/tvOutputWindow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end|center"
        android:textSize="30sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:maxLines="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvAC"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ac"
                android:textSize="24sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tvClear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="24sp"
                android:text="@string/u232b" />

            <TextView
                android:id="@+id/tvMod"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="24sp"
                android:text="@string/mod" />

            <TextView
                android:id="@+id/tvDiv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="24sp"
                android:text="@string/div" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/_7"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tv8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/_8" />

            <TextView
                android:id="@+id/tv9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/_9" />

            <TextView
                android:id="@+id/tvMul"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="24sp"
                android:text="@string/mul" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_4"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tv5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/_5" />

            <TextView
                android:id="@+id/tv6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/_6" />

            <TextView
                android:id="@+id/tvSub"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="24sp"
                android:text="@string/sub" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_1"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/_2" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/_3" />

            <TextView
                android:id="@+id/tvAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="24sp"
                android:text="@string/add" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv00"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_00"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tv0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/_0" />


            <TextView
                android:id="@+id/tvEqual"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="24sp"
                android:text="@string/equal" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>